# reg_RAG

./: .dockerignore  .gitignore  Dockerfile  README.md  architecture_diagram.dot  cloudbuild.yaml  pyproject.toml  pytest.ini  requirements.txt
data/: crawled_metadata.json  metadata_ece.json  metadata_kmvss.json
data/raw_xml_kmvss/: KMVSS_Art_100_149.xml  KMVSS_Art_101_150.xml  KMVSS_Art_102_151.xml  KMVSS_Art_102_152.xml  KMVSS_Art_102_153.xml  KMVSS_Art_102_154.xml  KMVSS_Art_103_155.xml  KMVSS_Art_103_156.xml  KMVSS_Art_104_157.xml  KMVSS_Art_105_158.xml  KMVSS_Art_106_159.xml  KMVSS_Art_107_160.xml  KMVSS_Art_108_161.xml  KMVSS_Art_108_162.xml  KMVSS_Art_108_163.xml  KMVSS_Art_109_164.xml  KMVSS_Art_10_013.xml  KMVSS_Art_110_165.xml  KMVSS_Art_110_166.xml  KMVSS_Art_111_167.xml  KMVSS_Art_111_168.xml  KMVSS_Art_111_169.xml  KMVSS_Art_111_170.xml  KMVSS_Art_112_171.xml  KMVSS_Art_112_172.xml  KMVSS_Art_112_173.xml  KMVSS_Art_112_174.xml  KMVSS_Art_112_175.xml  KMVSS_Art_112_176.xml  KMVSS_Art_112_177.xml  KMVSS_Art_112_178.xml  KMVSS_Art_112_179.xml  KMVSS_Art_112_180.xml  KMVSS_Art_112_181.xml  KMVSS_Art_112_182.xml  KMVSS_Art_112_183.xml  KMVSS_Art_112_184.xml  KMVSS_Art_112_185.xml  KMVSS_Art_112_186.xml  KMVSS_Art_113_187.xml  (+318 more)
scripts/: check_semantic_chunker.py  check_vector_db.py  inspect_ece.py  test_graph.py  test_hybrid_model.py  visualize_kg.py  visualize_workflow.py
src/core/: config.py  gcs_utils.py  logging.py
src/domain/: schemas.py
src/ingestion/: db_state.py  loaders.py  pipeline.py  utils.py
src/interface/: streamlit_app.py
(+8 files in other folders)
